brat/test/golden/kernel/kernel_application.brat.golden
Error in test/golden/kernel/kernel_application.brat on line 16:
rotate = { q => maybeRotate(true) }
                ^^^^^^^^^^^

  Expected function to be a (kernel) thunk, but found:
  (thunk :: { (a1 :: Bool) -> (a1 :: { (a1 :: Qubit) -o (a1 :: Qubit) }) })


